--- a/pom.xml
+++ b/pom.xml
@@ -106,14 +106,24 @@
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-        <finalName>kick-scooter-trip</finalName>
-    </build>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+                		<groupId>org.liquibase</groupId>
+               			<artifactId>liquibase-maven-plugin</artifactId>
+                		<version>3.8.0</version>
+                		<configuration>
+                		<changeLogFile>./src/main/resources/database/changelog/payment.xml</changeLogFile>    
+                		<propertyFile>/opt/liquibase/kick-scooter/payment/liquibase.properties</propertyFile>
+                		<promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
+                		</configuration>
+	  	 	</plugin>	
+		</plugins>
+		<finalName>kick-scooter-trip</finalName>
+	</build>
 
 </project>
